# encom

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/encom-cli/: Cargo.toml
crates/encom-cli/src/: main.rs
crates/encom-core/: Cargo.toml
crates/encom-core/src/: config.rs  lib.rs
crates/encom-core/tests/: ipc_roundtrip.rs
crates/encom-ipc/: Cargo.toml
crates/encom-ipc/src/: lib.rs
crates/encom-memory/: Cargo.toml
crates/encom-memory/src/: lib.rs
crates/encom-models/: Cargo.toml
crates/encom-models/src/: lib.rs  registry.rs
crates/encom-models/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/encom-skills/: Cargo.toml
crates/encom-skills/src/: lib.rs
examples/skills/inbox-triage/: encom.toml  index.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: index.ts
