[package]
name = "encom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Encom command-line interface."

[[bin]]
name = "encom"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
encom-core = { path = "../encom-core" }
