[package]
name = "encom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Encom agent runtime daemon — memory, scheduler, IPC, model adapters."

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
dirs.workspace = true

encom-models = { path = "../encom-models" }
encom-memory = { path = "../encom-memory" }
encom-skills = { path = "../encom-skills" }
encom-ipc    = { path = "../encom-ipc" }
