[package]
name = "encom-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "IPC protocol between encom CLI and the daemon (Unix socket on POSIX, named pipe on Windows)."

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
