[package]
name = "encom-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Persistent memory store (SQLite-backed) for Encom agents."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
uuid.workspace = true
tracing.workspace = true
